--- a/proyek/pom.xml
+++ b/proyek/pom.xml
@@ -61,6 +61,13 @@
         <artifactId>webdrivermanager</artifactId>
         <version>5.7.0</version>
     </dependency>
+
+    <!-- Allure TestNG -->
+    <dependency>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-testng</artifactId>
+        <version>2.24.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -104,6 +111,16 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.6.1</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.1.2</version>
+            <configuration>
+                <systemPropertyVariables>
+                    <allure.results.directory>allure-results</allure.results.directory>
+                </systemPropertyVariables>
+            </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
