--- a/proyek2/pom.xml
+++ b/proyek2/pom.xml
@@ -105,6 +105,16 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.6.1</version>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.1.2</version>
+            <configuration>
+                <systemPropertyVariables>
+                    <allure.results.directory>allure-results</allure.results.directory>
+                </systemPropertyVariables>
+            </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
